--- a/products/templates/products/body.html
+++ b/products/templates/products/body.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="{% url 'userss:log' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="auth/profile.html">Валерий П.
+                    <a class="nav-link" href="{% url 'userss:prof' %}">Валерий П.
                         <i class="fas fa-user-circle"></i>
                     </a>
                 </li>
