--- a/products/templates/products/body.html
+++ b/products/templates/products/body.html
@@ -32,20 +32,25 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products:merch' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'userss:log' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'userss:prof' %}">Валерий П.
-                        <i class="fas fa-user-circle"></i>
+                    <a class="nav-link" href="{% url 'products:merch' %}">Каталог <i class="fas fa-shopping-bag"></i>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Выйти <i class="fas fa-sign-out-alt"></i></a>
-                </li>
-            </ul>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'userss:prof' %}"> {{ user.username }}
+                            <i class="fas fa-user-circle"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'userss:logout' %}">Выйти <i class="fas fa-sign-out-alt"></i></a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'userss:log' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
+                    </li>
+                {% endif %}
+
+                 </ul>
         </div>
     </div>
 </nav>
@@ -54,7 +59,6 @@
 {% block content %}
 
 {% endblock %}
-
 
 
 {% block footer %} {% endblock %}
