--- a/products/templates/products/merch.html
+++ b/products/templates/products/merch.html
@@ -80,7 +80,12 @@
                                 <p class="card-text">{{ i.desc }}</p>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                                <a href="{% url 'products:basket_add' i.id %}">
+                                    <button type="button" class="btn btn-outline-success">
+                                        Отправить в корзину
+                                    </button>
+                                </a>
+
                             </div>
                         </div>
                     </div>
