--- a/products/templates/products/merch.html
+++ b/products/templates/products/merch.html
@@ -20,13 +20,14 @@
                 <h1 class="my-4">Лавка</h1>
                 <div class="list-group">
                     {% for i in categor %}
-                        <a href="#" class="list-group-item">{{ i.name }}</a>
+                        <a href="{% url 'merch:category' i.id %}" class="list-group-item">{{ i.name }}</a>
                     {% endfor %}
 
                     <!--<a href="#" class="list-group-item">Одежда</a>
                     <a href="#" class="list-group-item">Обувь</a>
                     <a href="#" class="list-group-item">Аксессуары</a>
                     <a href="#" class="list-group-item">Подарки</a>-->
+
                 </div>
 
             </div>
@@ -97,14 +98,21 @@
 
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                        <li class="page-item
+                        {% if not merch.has_previous %} disabled {% endif %}">
+                            <a class="page-link"
+                               href="{% if merch.has_previous %} {% url 'merch:page' merch.previous_page_number %} {% else %} {% endif %}" tabindex="-1" aria-disabled="true">Previous</a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
+                        {% for page in products.paginator.page_range %}
+                            <li class="page-item">
+                                <a class="page-link" href="{% url 'merch:page' page %}>
+                                    {{ page }}
+                                </a>
+                            </li>
+                        {% endfor %}
+                        <li class="page-item  {% if not merch.has_next %} disabled {% endif %}">
+                            <a class="page-link"
+                               href="{% if products.has_next %} {% url 'merch:page' products.next_page_number %} {% else %} {% endif %}">Next</a>
                         </li>
                     </ul>
                 </nav>
