List_display for admin, basket display, create personal user

--- a/products/templates/products/merch.html
+++ b/products/templates/products/merch.html
@@ -101,18 +101,19 @@
                         <li class="page-item
                         {% if not merch.has_previous %} disabled {% endif %}">
                             <a class="page-link"
-                               href="{% if merch.has_previous %} {% url 'merch:page' merch.previous_page_number %} {% else %} {% endif %}" tabindex="-1" aria-disabled="true">Previous</a>
+                               href="{% if merch.has_previous %} {% url 'merch:page' merch.previous_page_number %} {% else %} # {% endif %}"
+                               tabindex="-1" aria-disabled="true">Previous</a>
                         </li>
-                        {% for page in products.paginator.page_range %}
-                            <li class="page-item">
-                                <a class="page-link" href="{% url 'merch:page' page %}>
-                                    {{ page }}
-                                </a>
-                            </li>
+                        {% for page in merch.paginator.page_range %}
+                                <li class="page-item">
+                                    <a class="page-link" href="{% url 'merch:page' page %}">
+                                        {{ page }}
+                                    </a>
+                                </li>
                         {% endfor %}
                         <li class="page-item  {% if not merch.has_next %} disabled {% endif %}">
                             <a class="page-link"
-                               href="{% if products.has_next %} {% url 'merch:page' products.next_page_number %} {% else %} {% endif %}">Next</a>
+                               href="{% if merch.has_next %} {% url 'merch:page' merch.next_page_number %} {% else %} # {% endif %}">Next</a>
                         </li>
                     </ul>
                 </nav>
